# kyaru_mars_bot

./: .gitignore  Cargo.toml
src/: main.rs
