[package]
name = "kyaru_mars_bot"
version = "0.1.0"
authors = ["Jianfeng Zhang <swordfeng123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
futures = "*"
tokio = { version = "*", features = ["rt-threaded", "macros"]}
reqwest = "0.10.7"
anyhow = "1.0"
image = "0.23.8"
img_hash = "3.1.0"
bk-tree = "0.3.0"
telegram-bot-raw = "*"
scraper = "0.12.0"
lazy_static = "*"
regex = "1.3.9"
rmp-serde = "*"