[package]
name = "kyaru_mars_bot"
version = "0.1.0"
authors = ["Jianfeng Zhang <swordfeng123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.8"
futures = "*"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.3", features = ["json"] }
anyhow = "1.0"
image = "0.23.8"
img_hash = "3.1.0"
bk-tree = "0.3.0"
telegram-bot-raw = "*"
scraper = "0.12.0"
regex = "1.3.9"
rmp-serde = "*"
log = "0.4.11"
env_logger = "0.7.1"
once_cell = "1.4.1"
serde_json = "*"
htmlescape = "0.3.1"